--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="Images/Screenshot 2025-01-30 035220.png" alt="About Me">
+                        <img src="Images/ajj.jpg
+                            ">
                     </div>
                     <div class="about-col-2">
                         <h1 class="subtitle">About Me</h1>
